# shadowpay-cli

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
shadowpay/: __init__.py
shadowpay/cli/: app.py  market.py  merchant.py  user.py  ws.py
shadowpay/client/: merchant.py  user.py  websocket.py
shadowpay/models/: common.py  items.py  operations.py  user.py
shadowpay/ui/: formatters.py  panels.py
src/: config.py
src/cli/: __init__.py  app.py  market.py  merchant.py  user.py  ws.py
src/client/: __init__.py  debug.py  http.py  merchant.py  user.py  websocket.py
src/models/: __init__.py  common.py  merchant.py  offers.py
src/ui/: __init__.py  formatters.py  panels.py  tables.py
