[project]
name = "shadowpay-cli"
version = "0.1.0"
description = "Production-quality interactive CLI for the Shadowpay V2 API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.15.0",
    "orjson>=3.11.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[project.scripts]
shadowpay = "main:app"

[tool.pyright]
include = ["."]
extraPaths = ["."]
typeCheckingMode = "basic"

[tool.ruff]
src = ["shadowpay_cli"]
select = ["E", "F", "I"]

